nobase_include_HEADERS = \
	boost/preprocessor/cat.hpp \
	boost/preprocessor/stringize.hpp \
	boost/preprocessor/config/config.hpp
include_HEADERS = \
	command_codes.h \
	data.h \
	ini.h \
	inireader.h \
	ldb_chunks.h \
	ldb_reader.h \
	lmt_chunks.h \
	lmt_reader.h \
	lmu_chunks.h \
	lmu_reader.h \
	lsd_chunks.h \
	lsd_reader.h \
	reader_lcf.h \
	reader_options.h \
	reader_struct.h \
	reader_types.h \
	reader_util.h \
	reader_xml.h \
	rpg_actor.h \
	rpg_animationcelldata.h \
	rpg_animationframe.h \
	rpg_animation.h \
	rpg_animationtiming.h \
	rpg_attribute.h \
	rpg_battlecommand.h \
	rpg_battlecommands.h \
	rpg_battleranimationdata.h \
	rpg_battleranimationextension.h \
	rpg_battleranimation.h \
	rpg_chipset.h \
	rpg_class.h \
	rpg_commonevent.h \
	rpg_database.h \
	rpg_encounter.h \
	rpg_enemyaction.h \
	rpg_enemy.h \
	rpg_equipment.h \
	rpg_eventcommand.h \
	rpg_event.h \
	rpg_eventpagecondition.h \
	rpg_eventpage.h \
	rpg_itemanimation.h \
	rpg_item.h \
	rpg_learning.h \
	rpg_map.h \
	rpg_mapinfo.h \
	rpg_movecommand.h \
	rpg_moveroute.h \
	rpg_music.h \
	rpg_parameters.h \
	rpg_rect.h \
	rpg_saveactor.h \
	rpg_savecommonevent.h \
	rpg_saveeventcommands.h \
	rpg_saveeventdata.h \
	rpg_saveevents.h \
	rpg_save.h \
	rpg_saveinventory.h \
	rpg_savemapevent.h \
	rpg_savemapinfo.h \
	rpg_savepartylocation.h \
	rpg_savepicture.h \
	rpg_savescreen.h \
	rpg_savesystem.h \
	rpg_savetarget.h \
	rpg_savetitle.h \
	rpg_savevehiclelocation.h \
	rpg_skill.h \
	rpg_sound.h \
	rpg_start.h \
	rpg_state.h \
	rpg_switch.h \
	rpg_system.h \
	rpg_terms.h \
	rpg_terrain.h \
	rpg_testbattler.h \
	rpg_treemap.h \
	rpg_troop.h \
	rpg_troopmember.h \
	rpg_trooppagecondition.h \
	rpg_trooppage.h \
	rpg_variable.h \
	writer_lcf.h \
	writer_xml.h
