lib_LIBRARIES = libreaders.a
libreaders_a_SOURCES = \
	data.cpp \
	ini.cpp \
	inireader.cpp \
	ldb_equipment.cpp \
	ldb_eventcommand.cpp \
	ldb_parameters.cpp \
	ldb_reader.cpp \
	lmt_reader.cpp \
	lmt_rect.cpp \
	lmt_treemap.cpp \
	lmu_movecommand.cpp \
	lmu_reader.cpp \
	lsd_reader.cpp \
	reader_flags.cpp \
	reader_lcf.cpp \
	reader_struct.cpp \
	reader_util.cpp \
	reader_xml.cpp \
	rpg_setup.cpp \
	writer_lcf.cpp \
	writer_xml.cpp \
	generated/ldb_actor.cpp \
	generated/ldb_animationcelldata.cpp \
	generated/ldb_animation.cpp \
	generated/ldb_animationframe.cpp \
	generated/ldb_animationtiming.cpp \
	generated/ldb_attribute.cpp \
	generated/ldb_battlecommand.cpp \
	generated/ldb_battlecommands.cpp \
	generated/ldb_battleranimation.cpp \
	generated/ldb_battleranimationdata.cpp \
	generated/ldb_battleranimationextension.cpp \
	generated/ldb_chipset.cpp \
	generated/ldb_class.cpp \
	generated/ldb_commonevent.cpp \
	generated/ldb_database.cpp \
	generated/ldb_enemyaction.cpp \
	generated/ldb_enemy.cpp \
	generated/ldb_itemanimation.cpp \
	generated/ldb_item.cpp \
	generated/ldb_learning.cpp \
	generated/ldb_music.cpp \
	generated/ldb_skill.cpp \
	generated/ldb_sound.cpp \
	generated/ldb_state.cpp \
	generated/ldb_switch.cpp \
	generated/ldb_system.cpp \
	generated/ldb_terms.cpp \
	generated/ldb_terrain.cpp \
	generated/ldb_terrain_flags.cpp \
	generated/ldb_testbattler.cpp \
	generated/ldb_troop.cpp \
	generated/ldb_troopmember.cpp \
	generated/ldb_trooppagecondition.cpp \
	generated/ldb_trooppagecondition_flags.cpp \
	generated/ldb_trooppage.cpp \
	generated/ldb_variable.cpp \
	generated/lmt_encounter.cpp \
	generated/lmt_mapinfo.cpp \
	generated/lmt_start.cpp \
	generated/lmu_event.cpp \
	generated/lmu_eventpagecondition.cpp \
	generated/lmu_eventpagecondition_flags.cpp \
	generated/lmu_eventpage.cpp \
	generated/lmu_map.cpp \
	generated/lmu_moveroute.cpp \
	generated/lsd_saveactor.cpp \
	generated/lsd_savecommonevent.cpp \
	generated/lsd_save.cpp \
	generated/lsd_saveeventcommands.cpp \
	generated/lsd_saveeventdata.cpp \
	generated/lsd_saveevents.cpp \
	generated/lsd_saveinventory.cpp \
	generated/lsd_savemapevent.cpp \
	generated/lsd_savemapinfo.cpp \
	generated/lsd_savepartylocation.cpp \
	generated/lsd_savepicture.cpp \
	generated/lsd_savescreen.cpp \
	generated/lsd_savesystem.cpp \
	generated/lsd_savetarget.cpp \
	generated/lsd_savetitle.cpp \
	generated/lsd_savevehiclelocation.cpp \
	generated/rpg_actor.cpp \
	generated/rpg_animationcelldata.cpp \
	generated/rpg_animation.cpp \
	generated/rpg_animationframe.cpp \
	generated/rpg_animationtiming.cpp \
	generated/rpg_attribute.cpp \
	generated/rpg_battlecommand.cpp \
	generated/rpg_battlecommands.cpp \
	generated/rpg_battleranimation.cpp \
	generated/rpg_battleranimationdata.cpp \
	generated/rpg_battleranimationextension.cpp \
	generated/rpg_chipset.cpp \
	generated/rpg_class.cpp \
	generated/rpg_commonevent.cpp \
	generated/rpg_encounter.cpp \
	generated/rpg_enemyaction.cpp \
	generated/rpg_enemy.cpp \
	generated/rpg_equipment.cpp \
	generated/rpg_eventcommand.cpp \
	generated/rpg_event.cpp \
	generated/rpg_eventpagecondition.cpp \
	generated/rpg_eventpage.cpp \
	generated/rpg_itemanimation.cpp \
	generated/rpg_item.cpp \
	generated/rpg_learning.cpp \
	generated/rpg_map.cpp \
	generated/rpg_mapinfo.cpp \
	generated/rpg_movecommand.cpp \
	generated/rpg_moveroute.cpp \
	generated/rpg_music.cpp \
	generated/rpg_rect.cpp \
	generated/rpg_saveactor.cpp \
	generated/rpg_savecommonevent.cpp \
	generated/rpg_save.cpp \
	generated/rpg_saveeventcommands.cpp \
	generated/rpg_saveeventdata.cpp \
	generated/rpg_saveevents.cpp \
	generated/rpg_saveinventory.cpp \
	generated/rpg_savemapevent.cpp \
	generated/rpg_savemapinfo.cpp \
	generated/rpg_savepartylocation.cpp \
	generated/rpg_savepicture.cpp \
	generated/rpg_savescreen.cpp \
	generated/rpg_savesystem.cpp \
	generated/rpg_savetarget.cpp \
	generated/rpg_savetitle.cpp \
	generated/rpg_savevehiclelocation.cpp \
	generated/rpg_skill.cpp \
	generated/rpg_sound.cpp \
	generated/rpg_start.cpp \
	generated/rpg_state.cpp \
	generated/rpg_switch.cpp \
	generated/rpg_system.cpp \
	generated/rpg_terms.cpp \
	generated/rpg_terrain.cpp \
	generated/rpg_testbattler.cpp \
	generated/rpg_treemap.cpp \
	generated/rpg_troop.cpp \
	generated/rpg_troopmember.cpp \
	generated/rpg_trooppagecondition.cpp \
	generated/rpg_trooppage.cpp \
	generated/rpg_variable.cpp
libreaders_a_CXXFLAGS = -I$(top_srcdir)/include
